<resources>
    <string name="app_name">QFLiveSocialApp</string>
    <string name="tip_double_click_exit">再按一次退出程序</string>
    <!--splash-->
    <string name="splash_app_name">萌遇</string>
    <string name="splash_bottom_txt">如果您使用本软件将默认同意</string>
    <string name="splash_bottom_txt2">《用户协议》</string>
    <string name="splash_center_txt">相\n遇\n有\n时</string>
    <string name="splash_center_txt2">后\n会\n无\n期</string>
    <string name="splash_choince_login">选择登陆方式</string>
    <!--perfect info-->
    <string name="photo">照片</string>
    <string name="nickname">昵称</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="finish">完成</string>
    <!--login-->
    <string name="login">登录</string>
    <string name="hello">你好</string>
    <string name="statement1">注册或登陆我们的app</string>
    <string name="statement2">开启你的萌遇之旅</string>
    <string name="phone">手机</string>
    <string name="veriy_code">验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <!--recommend-->
    <string name="recommend_today_start">今日之星</string>
    <string name="recommend_statement">不妨找她们聊聊吧，她们人气很高哦~</string>
    <!--ranklist-->
    <string name="ranklist_attention_num">光注数  :</string>

    <!--mainpage-->
    <string name="total_phone_talk_time">累计通话 : </string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="discover">探索</string>
    <string name="personal">我的</string>
    <!--anchor detail-->
    <string name="attention">关注</string>
    <string name="photo2">相册</string>
    <string name="answer_interval">接听时段</string>
    <string name="call_evaluation">通话评价</string>
    <string name="chat_standard">聊天标准</string>
    <string name="call_duration">通话时长</string>
    <string name="personal_label">个人标签</string>
    <string name="personal_label2">个性签名</string>
    <string name="fans_num">粉丝数</string>
    <string name="get_gift">收到礼物</string>
    <string name="send_gift">送礼物</string>
    <string name="msg_self">私信Ta</string>
    <string name="audio_chat">语音通话</string>
    <string name="video_chat">视频通话</string>
    <!--call evaluation-->
    <string name="impression_label">印象标签</string>
    <string name="received_comments">收到的评价</string>
    <string name="call_evaluation_detail">评价详情</string>
    <!--personal center-->
    <string name="my_wallet">我的账户</string>
    <string name="anchor_anthen">主播认证</string>
    <string name="edit_personal_data">编辑个人资料</string>
    <string name="save">保存</string>
    <string name="qianming">个性签名</string>
    <string name="my_labels">我的标签</string>

    <string-array name="sex_arr">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="constellation_aries">白羊座</string>
    <string name="constellation_taurus">金牛座</string>
    <string name="constellation_gemini">双子座</string>
    <string name="constellation_cancer">巨蟹座</string>
    <string name="constellation_leo">狮子座</string>
    <string name="constellation_virgo">处女座</string>
    <string name="constellation_libra">天秤座</string>
    <string name="constellation_scorpio">天蝎座</string>
    <string name="constellation_sagittarius">射手座</string>
    <string name="constellation_capricorn">摩羯座</string>
    <string name="constellation_aquarius">水瓶座</string>
    <string name="constellation_pisces">双鱼座</string>

    <string-array name="constell_arr">
        <item>@string/constellation_aries</item>
        <item>@string/constellation_taurus</item>
        <item>@string/constellation_gemini</item>
        <item>@string/constellation_cancer</item>
        <item>@string/constellation_leo</item>
        <item>@string/constellation_virgo</item>
        <item>@string/constellation_libra</item>
        <item>@string/constellation_scorpio</item>
        <item>@string/constellation_sagittarius</item>
        <item>@string/constellation_capricorn</item>
        <item>@string/constellation_aquarius</item>
        <item>@string/constellation_pisces</item>
    </string-array>

</resources>
