<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/splash_mengyu_txt_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/splash_mengyu_margin_top"
        android:gravity="center"
        android:text="@string/splash_app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/splash_mengyu_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/splash_xiangyu_txt_margin_top"
        android:text="@string/splash_center_txt"
        android:textColor="@android:color/white"
        android:textSize="@dimen/splash_xiangyu_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/splash_houhui_txt_margin_top"
        android:text="@string/splash_center_txt2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/splash_xiangyu_txt_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/splash_meizhi_height"
        android:layout_marginLeft="@dimen/splash_meizhi_margin_left_right"
        android:layout_marginRight="@dimen/splash_meizhi_margin_left_right"
        android:layout_marginTop="@dimen/splash_meizhi_margin_top"
        android:src="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/splash_choice_login_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/splash_choice_login_line_width"
            android:layout_height="@dimen/splash_choice_login_line_height"
            android:layout_marginLeft="@dimen/splash_choice_login_line_margin_left_right"
            android:background="@color/white" />

        <TextView
            android:layout_width="@dimen/splash_choice_login_txt_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_choince_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_choice_login_txt_size" />

        <View
            android:layout_width="@dimen/splash_choice_login_line_width"
            android:layout_height="@dimen/splash_choice_login_line_height"
            android:layout_marginRight="@dimen/splash_choice_login_line_margin_left_right"
            android:background="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/splash_login_height"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_weibo"
            android:layout_width="@dimen/splash_login_img_height_width"
            android:layout_height="@dimen/splash_login_img_height_width"
            android:layout_marginLeft="@dimen/splash_login_margin_left_right"
            android:src="@mipmap/ic_weibo" />

        <ImageView
            android:id="@+id/img_wechat"
            android:layout_width="@dimen/splash_login_img_height_width"
            android:layout_height="@dimen/splash_login_img_height_width"
            android:layout_marginLeft="@dimen/splash_login_img_margin_left"
            android:src="@mipmap/ic_weixin" />

        <ImageView
            android:id="@+id/img_qq"
            android:layout_width="@dimen/splash_login_img_height_width"
            android:layout_height="@dimen/splash_login_img_height_width"
            android:layout_marginLeft="@dimen/splash_login_img_margin_left"
            android:src="@mipmap/ic_qq" />

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/splash_login_img_height_width"
            android:layout_height="@dimen/splash_login_img_height_width"
            android:layout_marginLeft="@dimen/splash_login_img_margin_left"
            android:layout_marginRight="@dimen/splash_login_margin_left_right"
            android:src="@mipmap/ic_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:text="@string/splash_bottom_txt"
            android:textColor="@android:color/white"
            android:textSize="@dimen/splash_statement_txt_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:text="@string/splash_bottom_txt2"
            android:textColor="#ff5491"
            android:textSize="@dimen/splash_statement_txt_size" />

    </LinearLayout>

</LinearLayout>