<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/perfect_addphoto_rl_height">

        <ImageView
            android:id="@+id/img_arrow_left"
            android:layout_width="@dimen/perfect_addphoto_arrow_img_width"
            android:layout_height="@dimen/perfect_addphoto_arrow_img_heigth"
            android:layout_marginLeft="@dimen/perfect_addphoto_arrow_img_margin_left"
            android:layout_marginTop="@dimen/perfect_addphoto_arrow_img_margin_top"
            android:src="@mipmap/arrow_left2" />

        <ImageView
            android:id="@+id/img_photo_add"
            android:layout_width="@dimen/perfect_addphoto_img_margin_width"
            android:layout_height="@dimen/perfect_addphoto_img_margin_height"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/img_add" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/perfect_photo_txt_margin_top"
        android:text="@string/photo"
        android:textColor="#751c18"
        android:textSize="@dimen/perfect_photo_txt_size" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/perfect_nickname_et_margin_top"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/nickname"
        android:textColor="#751c18"
        android:textColorHint="#787474"
        android:textSize="@dimen/perfect_nickname_et_txt_size" />

    <View
        android:layout_width="@dimen/perfect_nickname_divider_width"
        android:layout_height="@dimen/perfect_nickname_divider_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/perfect_nickname_divider_margin_top"
        android:background="#fce5e4" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/perfect_choice_sex_ll_height"
        android:layout_marginTop="@dimen/perfect_choice_sex_ll_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_man"
                android:layout_width="@dimen/perfect_choice_sex_img_height_width"
                android:layout_height="@dimen/perfect_choice_sex_img_height_width"
                android:scaleType="fitXY"
                android:src="@mipmap/man" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/perfect_choice_sex_txt_margin_top"
                android:text="@string/man"
                android:textColor="#787474"
                android:textSize="@dimen/perfect_choice_sex_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="57dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_woman"
                android:layout_width="@dimen/perfect_choice_sex_img_height_width"
                android:layout_height="@dimen/perfect_choice_sex_img_height_width"
                android:src="@mipmap/woman" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/perfect_choice_sex_txt_margin_top"
                android:text="@string/woman"
                android:textColor="#787474"
                android:textSize="@dimen/perfect_choice_sex_txt_size" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_regist_succ"
        android:layout_width="@dimen/perfect_btn_finish_rl_width"
        android:layout_height="@dimen/perfect_btn_finish_rl_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/perfect_btn_finish_rl_margin_top">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@mipmap/perfectinfo_succ" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textSize="@dimen/perfect_btn_finish_txt_size" />
    </RelativeLayout>

</LinearLayout>